# gesture-rs

./: .gitignore  Cargo.toml  calibration.json  run.bat  run.sh
.cargo/: config.toml
docs/: gaze-papers.md  gaze-tracking-plan.md  gaze-tracking-research.md  hand-detection.md  python-prototype-reference.md  speech-recognition-research.md  yolo26-hand-gesture-research.md
models/: flatc  iris_landmark.pb
models/saved_model/: saved_model.pb
models/saved_model/variables/: variables.data-00000-of-00001  variables.index
src/: calibration.rs  camera.rs  controller.rs  debug_view.rs  filter.rs  frame_channel.rs  gaze.rs  gesture.rs  hand.rs  kvm.rs  main.rs
